--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     ext.kotlin_version = "1.4.10"
-    ext.koin_version= "3.0.0-alpha-4"
-    ext.ktx_version="2.2.0"
+    ext.koin_version = "3.0.0-alpha-4"
+    ext.ktx_version = "2.2.0"
+    ext.ktor_version = "1.4.1"
+    ext.kotlin_serialization = "1.0.0"
+
     repositories {
         google()
         jcenter()
@@ -22,7 +26,7 @@ allprojects {
         jcenter()
 
         maven {
-            url  "https://dl.bintray.com/ekito/koin"
+            url "https://dl.bintray.com/ekito/koin"
         }
     }
 }
