--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
+    implementation 'com.google.android.material:material:1.2.1'
 
 }
