-- removed some hardcoded data -- separated `service` package -- separated Unknown errors from UseCase and Repo -- TODO fixes -- View -> Presenter -- Initial SharedPrefs service (cache service) -- added initial SerializationWrapper.kt (need to be used: Multiple services(sharedPref, Ktor))

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     packagingOptions {
         exclude("META-INF/*.kotlin_module")
     }
